# In the script of the parent Control node
extends Control



func _on_left_button_pressed() -> void:
	print("press") # Replace with function body.


func _on_right_button_pressed() -> void:
	print("press") # Replace with function body.


func _on_up_button_pressed() -> void:
	print("press") # Replace with function body.


func _on_down_button_pressed() -> void:
	print("press") # Replace with function body.


func _on_left_button_released() -> void:
	print("press") # Replace with function body.


func _on_right_button_released() -> void:
	print("press") # Replace with function body.


func _on_up_button_released() -> void:
	print("press") # Replace with function body.


func _on_down_button_released() -> void:
	print("press") # Replace with function body.
